--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "devDependencies": {
     "vuepress": "^2.0.0-beta.60"
+  },
+  "dependencies": {
+    "@vuepress/plugin-back-to-top": "^2.0.0-beta.60"
   }
 }
