--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vuepress": "^2.0.0-beta.60"
   },
   "dependencies": {
-    "@vuepress/plugin-back-to-top": "^2.0.0-beta.60"
+    "@vuepress/plugin-back-to-top": "^2.0.0-beta.60",
+    "@vuepress/plugin-search": "^2.0.0-beta.60"
   }
 }
