--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.60",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.60",
     "@vuepress/plugin-nprogress": "^2.0.0-beta.60",
     "@vuepress/plugin-search": "^2.0.0-beta.60"
   }
